@@ -2,6 +2,7 @@ Revision history for Perl extension Devel::Size.
 
 0.76_50 2011-05-12 nicholas
  * Split out HEK size calculation into hek_size(). Add the shared HE overhead.
+ * Handle shared hash key scalars correctly.
 
 0.76 2011-05-11 nicholas
  * Just fix the version number in the line below.
